# ManagerPasswords

./: CMakeLists.txt  PasswordsEntry.cpp  PasswordsEntry.h  main.cpp
